# sudoku

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md  index.html  script.js  style.css
lib/: CMakeLists.txt  misc.js
lib/monkey/: element.js
scripts/: install_to_prefix.sh
src/: CMakeLists.txt  button.c  button.h  context.c  context.h  digit.c  digit.h  game_scene.c  game_scene.h  grid.c  grid.h  grid_test.c  layout.c  layout.h  layout_test.c  main.c  palette.c  palette.h
src/app/: CMakeLists.txt  main.c
src/layout/: CMakeLists.txt  layout.c  test_layout.c
src/layout/include/: layout.h
